<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layoutDescription="@xml/fragment_product_details_scene"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background_gray"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <com.github.mmin18.widget.RealtimeBlurView
            android:id="@+id/blurring_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/product_image"
            app:layout_constraintEnd_toEndOf="@id/product_image"
            app:layout_constraintStart_toStartOf="@id/product_image"
            app:layout_constraintTop_toTopOf="@id/product_image"
            app:realtimeBlurRadius="16dp" />

        <View
            android:id="@+id/status_bar_safety_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/navigation_bar_guideline_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_bar_safety_view" />

        <View
            android:id="@+id/max_scroll_guideline_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_and_navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_bar_safety_view" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/bg_button"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_left_arrow"
            app:layout_constraintBottom_toBottomOf="@id/navigation_bar_guideline_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/navigation_bar_guideline_view"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/product_details_title_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:elevation="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/navigation_bar_guideline_view"
            app:layout_constraintEnd_toStartOf="@id/product_details_title_price"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toTopOf="@id/navigation_bar_guideline_view"
            tools:text="Product"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/product_details_title_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:elevation="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBaseline_toBaselineOf="@id/product_details_title_name"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="$31.00"
            tools:visibility="visible" />

        <View
            android:id="@+id/default_scroll_guideline_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/product_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/details_scroll_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_scroll_view"
            android:clipToPadding="false"
            android:elevation="12dp"
            android:overScrollMode="never"
            android:paddingBottom="84dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/default_scroll_guideline_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingVertical="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/product_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_bold"
                        android:includeFontPadding="false"
                        android:textColor="@color/black"
                        android:textSize="32sp"
                        tools:text="Product" />

                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        tools:text="31.00€" />

                </LinearLayout>

                <TextView
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="Description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_rounded"
                    android:backgroundTint="@color/background_gray"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <RatingBar
                            android:id="@+id/overall_star"
                            style="@style/Widget.AppCompat.RatingBar.Indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="1"
                            android:progressTint="@color/green"
                            android:rating="0.0"
                            android:scaleX="0.9"
                            android:scaleY="0.9" />

                        <TextView
                            android:id="@+id/overall_review"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/initial_reviews_value"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/reviews_count"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="4dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_semibold"
                            android:gravity="bottom"
                            android:paddingBottom="6dp"
                            android:text="@string/initial_reviews_count"
                            android:textSize="14sp" />

                        <ImageButton
                            android:id="@+id/add_review_button"
                            android:layout_width="48dp"
                            android:layout_height="32dp"
                            android:layout_marginStart="12dp"
                            android:background="@drawable/bg_button"
                            android:padding="8dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_plus"
                            app:layout_constraintBottom_toBottomOf="@id/navigation_bar_guideline_view"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/navigation_bar_guideline_view"
                            app:tint="@color/white" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/empty_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:gravity="center"
                        android:text="@string/reviews_empty_message"
                        android:textSize="16sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/error_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:gravity="center"
                        android:text="@string/reviews_error_message"
                        android:textColor="@color/red"
                        android:textSize="16sp"
                        android:visibility="gone" />

                    <tn.seif.adidaschallenge.ui.custom.DotsLoader
                        android:id="@+id/review_loader"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="12dp"
                        android:visibility="visible"
                        app:hasLogo="false"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/reviews_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:nestedScrollingEnabled="false"
                        android:overScrollMode="never"
                        android:paddingHorizontal="4dp"
                        android:scrollbars="none"
                        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                        app:spanCount="1"
                        tools:itemCount="2"
                        tools:listitem="@layout/item_view_review" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/add_cart_button"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:drawableStart="@drawable/ic_shopping_cart"
            android:elevation="16dp"
            android:stateListAnimator="@null"
            android:text="@string/add_to_cart"
            android:translationZ="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <LinearLayout
        android:id="@+id/empty_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_height"
            android:layout_marginTop="@dimen/status_bar_size"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_bar_safety_view">

            <ImageButton
                android:id="@+id/empty_back_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/bg_button"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_left_arrow"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/empty_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/product_details_initial_title"
                android:textColor="@color/black"
                android:textSize="34sp"
                tools:visibility="visible" />

        </LinearLayout>

        <tn.seif.adidaschallenge.ui.custom.DotsLoader
            android:id="@+id/loader"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navigation_bar_guideline_view" />

        <include
            android:id="@+id/error_layout"
            layout="@layout/view_products_error"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>